syntax = "proto3";

package routing;

option go_package = "github.com/JoeShih716/go-k8s-game-server/api/proto;proto";

// ServiceType 定義了服務的類型，影響路由策略
enum ServiceType {
  UNKNOWN_SERVICE = 0; // 未知服務
  STATELESS = 1;       // 無狀態服務 (例如: 老虎機, 大廳)，採用輪詢 (Round-Robin) 分發
  STATEFUL = 2;        // 有狀態服務 (例如: 捕魚, 對戰)，採用黏性路由 (Sticky Routing)
}

// RoutingMetadata 包含路由決策所需的元數據
message RoutingMetadata {
  ServiceType service_type = 1; // 服務類型
  string target_service = 2;    // 目標服務名稱 (例如: "slots-service", "fishing-service")
  string room_id = 3;           // 房間 ID (有狀態服務路由必需，用於鎖定特定 Pod)
  string user_id = 4;           // 使用者 ID (可用於一致性雜湊路由)
  map<string, string> tags = 5; // 自定義路由標籤 (例如: vip_level, region)
}
